Added ShortURLApi Service :alien:

--- a/src/ui-kits/Button.module.scss
+++ b/src/ui-kits/Button.module.scss
@@ -4,6 +4,11 @@
   cursor: pointer;
   font-family: inherit;
   font-weight: 600;
+
+  &.ButtonPrimary:disabled {
+    background-color: $grayish-violet;
+    cursor: not-allowed;
+  }
 }
 
 .ButtonPrimary {
