--- a/src/components/ShortenURLForm.module.scss
+++ b/src/components/ShortenURLForm.module.scss
@@ -4,6 +4,10 @@
   padding: 0 16px;
   margin: 60px 0;
   position: relative;
+
+  @include media-breakpoint-up(xl) {
+    padding: 0;
+  }
 }
 
 .ShortenURLSection {
@@ -11,15 +15,37 @@
   border-radius: 10px;
   overflow: hidden;
   padding: 28px;
+  z-index: 2;
+
+  @include media-breakpoint-up(xl) {
+    padding: 42px 42px 52px;
+    min-height: calc(150px - 42*2px);
+    display: flex;
+  }
 }
 
 .BackgroundFigure {
   position: absolute;
-  z-index: 1;
   top: 0;
   right: 16px;
-  border-top-right-radius: 10px;
+  z-index: 1;
   overflow: hidden;
+  border-top-right-radius: 10px;
+
+  @include media-breakpoint-up(xl) {
+    width: 100%;
+    right: 0;
+    height: 160px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  img {
+    @include media-breakpoint-up(xl) {
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
 
 .URLForm {
@@ -27,7 +53,12 @@
   z-index: 10;
   display: flex;
   flex-flow: column;
-  align-items: stretch;
+
+  @include media-breakpoint-up(xl) {
+    flex-flow: row;
+    align-items: center;
+    flex: 1;
+  }
 }
 
 .URLInput {
@@ -37,6 +68,12 @@
   font-family: inherit;
   font-weight: 600;
   border: 2px solid transparent;
+
+  @include media-breakpoint-up(xl) {
+    flex: 0 1 80%;
+    padding-left: 28px;
+    margin-right: auto;
+  }
 
   &::placeholder {
     color: $grayish-violet;
@@ -52,9 +89,22 @@
   font-style: italic;
   margin-top: 8px;
   font-size: 15px;
+
+  @include media-breakpoint-up(xl) {
+    position: absolute;
+    bottom: -24px;
+  }
 }
 
 .ButtonSubmit {
   margin-top: 20px;
   border-radius: 8px;
+
+  @include media-breakpoint-up(xl) {
+    margin-top: 0;
+
+    &:active {
+      transform: translateY(6px);
+    }
+  }
 }
