--- a/src/components/ShortenURLForm.module.scss
+++ b/src/components/ShortenURLForm.module.scss
@@ -15,9 +15,10 @@
   border-radius: 10px;
   overflow: hidden;
   padding: 28px;
+  position: relative;
   z-index: 2;
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(md) {
     padding: 42px 42px 52px;
     min-height: calc(150px - 42*2px);
     display: flex;
@@ -54,7 +55,7 @@
   display: flex;
   flex-flow: column;
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(md) {
     flex-flow: row;
     align-items: center;
     flex: 1;
@@ -69,10 +70,10 @@
   font-weight: 600;
   border: 2px solid transparent;
 
-  @include media-breakpoint-up(xl) {
-    flex: 0 1 80%;
+  @include media-breakpoint-up(md) {
     padding-left: 28px;
-    margin-right: auto;
+    flex: 1;
+    margin-right: 20px;
   }
 
   &::placeholder {
@@ -90,7 +91,7 @@
   margin-top: 8px;
   font-size: 15px;
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(md) {
     position: absolute;
     bottom: -24px;
   }
@@ -100,8 +101,9 @@
   margin-top: 20px;
   border-radius: 8px;
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(md) {
     margin-top: 0;
+    flex: 0 1 20%;
 
     &:active {
       transform: translateY(6px);
