--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,7 @@ $dark-violet: hsl(257, 27%, 26%);
 $red: hsl(0, 87%, 67%);
 $white: rgb(255, 255, 255);
 $gray: hsl(0, 0%, 75%);
+$grayish-white: rgb(240, 241, 246);
 $grayish-violet: hsl(257, 7%, 63%);
 $very-dark-blue: hsl(255, 11%, 22%);
 $very-dark-violet: hsl(260, 8%, 14%);
