Refactored Code; made spacing adjustments :recycle:

--- a/src/components/ShortenURLForm.module.scss
+++ b/src/components/ShortenURLForm.module.scss
@@ -28,7 +28,7 @@
 .BackgroundFigure {
   position: absolute;
   top: 0;
-  right: 16px;
+  right: 0;
   z-index: 1;
   overflow: hidden;
   border-top-right-radius: 10px;
