--- a/src/components/ShortURLBox.module.scss
+++ b/src/components/ShortURLBox.module.scss
@@ -3,31 +3,77 @@
 .ShortURLBox {
   background-color: $white;
   border-radius: 10px;
+
+  @include media-breakpoint-up(md) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 28px;
+  }
 }
 
 .OriginalLinkSection {
   padding: 24px 28px;
   border-bottom: 2px solid $grayish-white;
+
+  @include media-breakpoint-up(md) {
+    padding: 0;
+    flex: 0 1 70%;
+    border: none;
+  }
 }
 
 .OriginalLink {
   color: $very-dark-violet;
   font-weight: 600;
+  width: 310px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  @include media-breakpoint-up(lg) {
+    width: 400px;
+  }
+
+  @include media-breakpoint-up(xl) {
+    width: 600px;
+  }
 }
 
 .AfterLinkSection {
   padding: 24px 28px;
   display: flex;
   flex-flow: column;
+
+  @include media-breakpoint-up(md) {
+    padding: 0;
+    flex: 1;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .ShortLink {
   color: $cyan;
   font-weight: 600;
+
+  @include media-breakpoint-up(md) {
+    margin-right: 20px;
+  }
 }
 
 .Button {
   margin-top: 20px;
   border-radius: 8px;
   cursor: pointer;
+
+  @include media-breakpoint-up(md) {
+    width: 150px;
+    margin-top: 0px;
+  }
+
+  &.ButtonCopySuccess {
+    background-color: $dark-violet;
+  }
 }
