--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -4,7 +4,10 @@
   position: relative;
   z-index: 1;
   background-color: $grayish-white;
-  transform: translateY(-151px);
-  min-height: 300px;
-  padding-bottom: 152px;
+  margin-top: -151px;
+  padding-bottom: 150px;
+
+  @include media-breakpoint-up(md) {
+    margin-top: -140px;
+  }
 }
