Added statistics section

--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -1,6 +1,6 @@
 @import '../styles/main.scss';
 
-.ShortURLOutput {
+.GrayBackgroundContainer {
   position: relative;
   z-index: 1;
   background-color: $grayish-white;
