--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -6,4 +6,5 @@ $gray: hsl(0, 0%, 75%);
 $grayish-white: rgb(240, 241, 246);
 $grayish-violet: hsl(257, 7%, 63%);
 $very-dark-blue: hsl(255, 11%, 22%);
+$mild-dark-violet: hsl(258, 9%, 22%);
 $very-dark-violet: hsl(260, 8%, 14%);
