Added footer section

--- a/src/pages/HomePage.module.scss
+++ b/src/pages/HomePage.module.scss
@@ -22,3 +22,7 @@
     background-image: url(../../public/images/bg-boost-desktop.svg);
   }
 }
+
+.FooterContainer {
+  background-color: $extra-dark-violet;
+}
