--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -8,3 +8,4 @@ $grayish-violet: hsl(257, 7%, 63%);
 $very-dark-blue: hsl(255, 11%, 22%);
 $mild-dark-violet: hsl(258, 9%, 22%);
 $very-dark-violet: hsl(260, 8%, 14%);
+$extra-dark-violet: hsl(266, 10%, 14%);
