--- a/src/components/BoostLink.module.scss
+++ b/src/components/BoostLink.module.scss
@@ -2,9 +2,12 @@
 
 
 .BoostLinkSection {
+  padding: 40px;
+  text-align: center;
   min-height: 300px;
 
   @include media-breakpoint-up(sm) {
+    padding: 0;
     min-height: 250px;
   }
 }
